--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,8 @@ defaults:
     values:
       image: true
 
+permalink: /blog/:year/:month/:day/:title
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
