--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,11 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
 # Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
+# {{ site.title }}
+# {{ site.email }}
+# {{ site.myvariable }}
 title: Mad Ramblings
 email: Atrion@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  This Site is just a collections of my thoughts, Ramblings, and Tips
-  that I find online. Feel free to move along.
+  Just a random collections of Thoughts, Ramblings, and Tips.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Atrion84
@@ -26,6 +14,7 @@ github_username:  Atrion
 # Build settings
 markdown: kramdown
 # theme: minima
+
 plugins:
   - jekyll-feed
 
@@ -37,14 +26,3 @@ defaults:
 
 permalink: /blog/:year/:month/:day/:title
 
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
