--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Just a Random Collections of Thoughts, Ramblings, and Tips.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: Atrion84
+# twitter_username: Atrion84
 github_username:  Atrion
 
 # Build settings
