--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,9 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: Atrion84
 github_username:  Atrion
 
+# Place in post to section of Excerpt
+excerpt_separator: "<!--more-->"
+
 # Build settings
 markdown: kramdown
 # theme: minima
